Refactor on ASM: wrap Collections.unmodifiableMap() only when necessary (mcVersion < 20w22a)